After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 617542 - Fix passing GDestroyNotify
Fix passing GDestroyNotify
Status: RESOLVED FIXED
Product: pygi
Classification: Deprecated
Component: general
unspecified
Other All
: Normal normal
: 0.6
Assigned To: pygi-maint
pygi-maint
Depends on:
Blocks:
 
 
Reported: 2010-05-03 16:22 UTC by Tomeu Vizoso
Modified: 2010-05-03 16:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix passing GDestroyNotify (1.98 KB, patch)
2010-05-03 16:22 UTC, Tomeu Vizoso
committed Details | Review
Fix passing GDestroyNotify (1.66 KB, patch)
2010-05-03 16:43 UTC, Tomeu Vizoso
committed Details | Review

Description Tomeu Vizoso 2010-05-03 16:22:33 UTC
We were passing a pointer to the PyGICClosure instead.
Comment 1 Tomeu Vizoso 2010-05-03 16:22:34 UTC
Created attachment 160202 [details] [review]
Fix passing GDestroyNotify
Comment 2 Zach Goldberg 2010-05-03 16:25:30 UTC
Review of attachment 160202 [details] [review]:

::: tests/test_everything.py
@@ +156,3 @@
             val = Everything.test_callback_user_data(callback, "Test%d" % i)
         for i in range(100):
+            self.assertEquals(val, i + 1)

I'm not a huge fan of throwing in random code cleanups with other diffs.  If you want to send a separate patch for these though (or just put it straight in, doesnt need review IMO) thats fine =P

@@ +174,3 @@
 
+    def testCallbackDestroyNotify(self):
+

Hm, I could swear there was a destroy notify test already in there.  Might've gotten lost in all the commotion lately.
Comment 3 Tomeu Vizoso 2010-05-03 16:43:38 UTC
The following fix has been pushed:
3e61e7d Fix passing GDestroyNotify
Comment 4 Tomeu Vizoso 2010-05-03 16:43:44 UTC
Created attachment 160206 [details] [review]
Fix passing GDestroyNotify