Fix passing GDestroyNotify

https://bugzilla.gnome.org/show_bug.cgi?id=617542